stonecutter: support MC 1.20.1 (Fabric)